--- a/Riskvalve/Views/AssetRegister/Area.cshtml
+++ b/Riskvalve/Views/AssetRegister/Area.cshtml
@@ -14,7 +14,7 @@
             </div>
             <div class="table-container">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <button type="button" class="btn btn-primary custom btn-area-action btn-with-icon" attr-mode="create">
+                    <button onclick="editAction.apply(this)" type="button" class="btn btn-primary custom btn-area-action btn-with-icon" attr-mode="create">
                         <i class="fa-solid fa-plus"></i> Add New
                     </button>
                     <div class="">
