--- a/Riskvalve/Views/Inspection/Index.cshtml
+++ b/Riskvalve/Views/Inspection/Index.cshtml
@@ -169,7 +169,7 @@
                                             <div class="form-group ">
                                                 <label for="field-inspection-date">Inspection Date</label>
                                                 <input id="field-inspection-date" type="text"
-                                                    class="form-control datepicker" name="InspectionDate" />
+                                                    class="form-control datepicker" name="InspectionDate" required />
                                             </div>
                                             <div class="form-group ">
                                                 <label for="field-inspection-current-condition-limit-state-b">Current
@@ -223,7 +223,8 @@
                                                 <label for="field-inspection-function-condition">Function
                                                     Condition</label>
                                                 <input type="text" class="form-control"
-                                                    id="field-inspection-function-condition" name="FunctionCondition">
+                                                    id="field-inspection-function-condition" name="FunctionCondition"
+                                                    required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="field-inspection-description">Inspection Description</label>
@@ -274,6 +275,17 @@
 
 @section Scripts {
     <script>
+        const urlParams = new URLSearchParams(window.location.search);
+        const idParam = urlParams.get('inspectionid');
+        $(document).ready(function () {
+            $('.btn-add-new-inspection').click(addTab);
+            if (idParam) {
+                if (idParam != "0") {
+                    $('.btn-add-new-inspection[attr-inspection-id=' + idParam + ']').trigger('click')
+                }
+            }
+        });
+
         $(document).on('click', '.btn-close-inspection', function () {
             const ctr = $(this).closest('a').attr('tab-num')
             close_inspection(ctr);
@@ -285,72 +297,74 @@
             const ctr = $(el).closest('.tab-pane').attr('tab-num')
             const nativeForm = form[0]
             const formData = new FormData(nativeForm);
-            if (form.hasClass('history-form')) {
-                // update
-                $.ajax({
-                    url: '/Inspection/UpdateInspection',
-                    type: 'POST', // or 'GET' depending on your form method
-                    data: formData,
-                    contentType: false,
-                    processData: false,
-                    success: function (response) {
-                        form.addClass('history-form')
-                        // Handle success response
-                        alert('Data successfully updated')
-                    },
-                    error: function (xhr, status, error) {
-                        alert('Error submitting the form')
-                    }
-                });
-            } else {
-                // add new
-                $.ajax({
-                    url: '/Inspection/AddInspection',
-                    type: 'POST', // or 'GET' depending on your form method
-                    data: formData,
-                    contentType: false,
-                    processData: false,
-                    success: function (result) {
-                        if (result.Status == 'Error') {
-                            alert(result.Message)
-                        } else {
-                            alert(result.Message)
-                            var res = JSON.parse(result.InspectionData)
-                            @* console.log(res) *@
+            if (form.valid()) {
+                if (form.hasClass('history-form')) {
+                    // update
+                    $.ajax({
+                        url: '/Inspection/UpdateInspection',
+                        type: 'POST', // or 'GET' depending on your form method
+                        data: formData,
+                        contentType: false,
+                        processData: false,
+                        success: function (response) {
                             form.addClass('history-form')
-                            // add menu to tree
-                            @* console.log(equipmentId) *@
-                            @* console.log($('ul[equipment-id=' + equipmentId + ']')) *@
-                            $('ul[equipment-id="' + equipmentId + '"]').append(`
-                                <li class="treeview">
-                                    <a class="btn-add-new-inspection" history-button="" 
-                                    attr-id="${res.Asset.Id}" attr-inspection-id="${res.Id}" 
-                                    attr-name="${res.Asset.TagNo} ${res.InspectionDate}" 
-                                    attr-sidebar-level="4" 
-                                    attr-find-inspection="${res.Asset.BusinessArea}" 
-                                    attr-find-platform="${res.Asset.Platform}" 
-                                    attr-find-equipment="${res.Asset.TagNo}" 
-                                    attr-find-imr="NEW"
-                                    onclick="addTab.apply(this)"
-                                    >
-                                        ${res.InspectionDate}
-                                    </a>
-                                </li>
-                            `)
-                            form.find('.preview-image-gallery .single-image').remove()
-                            form.find('.preview-image-gallery input[type=file]').remove()
-                            fetchHistoryData({
-                                id: res.Id,
-                                counter: ctr
-                            })
+                            // Handle success response
+                            alert('Data successfully updated')
+                        },
+                        error: function (xhr, status, error) {
+                            alert('Error submitting the form')
                         }
-                        @* alert('Data successfully inserted') *@
-                    },
-                    error: function (xhr, status, error) {
-                        // Handle error
-                        alert('error submitting the form')
-                    }
-                });
+                    });
+                } else {
+                    // add new
+                    $.ajax({
+                        url: '/Inspection/AddInspection',
+                        type: 'POST', // or 'GET' depending on your form method
+                        data: formData,
+                        contentType: false,
+                        processData: false,
+                        success: function (result) {
+                            if (result.Status == 'Error') {
+                                alert(result.Message)
+                            } else {
+                                alert(result.Message)
+                                var res = JSON.parse(result.InspectionData)
+        @* console.log(res) *@
+                                    form.addClass('history-form')
+                                // add menu to tree
+        @* console.log(equipmentId) *@
+        @* console.log($('ul[equipment-id=' + equipmentId + ']')) *@
+                                    $('ul[equipment-id="' + equipmentId + '"]').append(`
+                                        <li class="treeview">
+                                            <a class="btn-add-new-inspection" history-button="" 
+                                            attr-id="${res.Asset.Id}" attr-inspection-id="${res.Id}" 
+                                            attr-name="${res.Asset.TagNo} ${res.InspectionDate}" 
+                                            attr-sidebar-level="4" 
+                                            attr-find-inspection="${res.Asset.BusinessArea}" 
+                                            attr-find-platform="${res.Asset.Platform}" 
+                                            attr-find-equipment="${res.Asset.TagNo}" 
+                                            attr-find-imr="NEW"
+                                            onclick="addTab.apply(this)"
+                                            >
+                                                ${res.InspectionDate}
+                                            </a>
+                                        </li>
+                                    `)
+                                form.find('.preview-image-gallery .single-image').remove()
+                                form.find('.preview-image-gallery input[type=file]').remove()
+                                fetchHistoryData({
+                                    id: res.Id,
+                                    counter: ctr
+                                })
+                            }
+        @* alert('Data successfully inserted') *@
+                            },
+                        error: function (xhr, status, error) {
+                            // Handle error
+                            alert('error submitting the form')
+                        }
+                    });
+                }
             }
         }
 
@@ -423,13 +437,13 @@
                     let galleryHtml = ''
                     data.inspectionFiles.forEach(i => {
                         galleryHtml += `<input type="hidden" identifier="delete-gallery-${i.id}" name="deletedImageIDs[${i.id}]" value="0">
-                            <div class="single-image" data-identifier="gallery-${i.id}">
-                                <img src="/${i.filePath}"">
-                                <div class="delete-image-btn" onclick="deleteGalleryImage('gallery-${i.id}')">
-                                    <i class="fa-solid fa-xmark"></i>
+                                <div class="single-image" data-identifier="gallery-${i.id}">
+                                    <img src="/${i.filePath}"">
+                                    <div class="delete-image-btn" onclick="deleteGalleryImage('gallery-${i.id}')">
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </div>
                                 </div>
-                            </div>
-                            `
+                                `
                     })
 
                     //fill image
@@ -469,10 +483,6 @@
             $('#pidno' + counter).val(data.pidNo)
             $('#classrating' + counter).val(data.classRating)
         }
-
-        $(document).ready(function () {
-            $('.btn-add-new-inspection').click(addTab);
-        });
 
         let template_inspection = $('#template_inspection');
         let template_inspection_html = template_inspection.html();
